--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,10 +19,10 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Set up Python and Create Virtual Environment
         uses: actions/setup-python@v2
         with:
-          python-version: 3.7  # Choose the Python version you need
+          python-version: 3.x  # Choose the appropriate Python version
 
       - name: Create and Activate Virtual Environment
         run: |
@@ -47,6 +47,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y jq unzip
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -69,7 +70,17 @@ jobs:
           # push it to ECR so that it can
           # be deployed to ECS.
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          
+          retries=5
+          while [ $retries -gt 0 ]; do
+            docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+            if [ $? -eq 0 ]; then
+              break  # Success
+            fi
+            retries=$((retries - 1))
+            sleep 10  # Adjust the sleep duration as needed
+          done
+          
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
   Continuous-Deployment:
@@ -101,3 +112,4 @@ jobs:
       - name: Clean previous images and containers
         run: |
           docker system prune -f
+          
